added  account page and theme bug fix.

--- a/templates/Poll/pages/createPoll.html
+++ b/templates/Poll/pages/createPoll.html
@@ -3,7 +3,7 @@
 {% block title %} Create Poll | Poll App {% endblock title %}
 
 {% block body %}
-    {% include "Feed/navbar.html" %}
+    {% include "navbar.html" %}
 {% endblock body %}
 
 {% block mainBody %}
