--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{% static 'Feed/src/style.css' %}">
+  <!-- Custom theme selector js -->
+  <script src="{% static 'Feed/src/theme.js' %}"></script>
 </head>
 
 <body>
   
   {% block body %}{% endblock body %}
+  
+  <!-- ignoring the navbar -->
+  <div id="ignoreNavbar"></div>
 
   {% block mainBody %}{% endblock mainBody %}
 
