--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="{% static 'Feed/src/style.css' %}">
   <!-- Custom theme selector js -->
   <script src="{% static 'Feed/src/theme.js' %}"></script>
+  <!-- font awesome (5.15.4) CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
