--- a/templates/Poll/pages/createPoll.html
+++ b/templates/Poll/pages/createPoll.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %} Create Poll | Poll App {% endblock title %}
 
@@ -7,14 +8,37 @@
 {% endblock body %}
 
 {% block mainBody %}
-    <div id="mainBody" class="container">
-        <form >
-            <!-- Poll text input -->
-            <div data-mdb-input-init class="form-outline mb-4">
-                <input type="text" id="pollText1" class="form-control" name="username" required/>
-                <label class="form-label" for="pollText1" >Poll text</label>
-            </div>
-
-        </form>
+    <!-- main part -->
+    <div class="container text-center">
+        <h1>Poll Maker</h1>
+        <h4>Create polls and get instent feedback in real time.</h4>
+        <div class="container text-start mt-5 border border-1 rounded-3 p-3">
+            <form action="">
+                <div class="border-bottom border-4">
+                    <!-- question -->
+                    <div class="mb-3">
+                        <label for="pollText" class="col-form-label-lg">Title</label>
+                        <input id="pollText" type="text" class="form-control" placeholder="Type your question here" required>
+                    </div>
+                    <!-- answers -->
+                    <div class="mb-3" id="answers">
+                        <input type="number" name="optionsCount" id="optionsCount" hidden>
+                        <label for="answerOptions1" class="col-form-label-lg">Answers Options</label>
+                        <input id="answerOptions1" type="text" class="form-control mb-3" placeholder="Option 1" required>
+                        <input id="answerOptions2" type="text" class="form-control mb-3" placeholder="Option 2" required>
+                        <div id="options"></div>
+                        <button type="button" class="btn btn-info" id="addOption">Add option</button>
+                        <button type="button" class="btn btn-danger" id="deleteOption" hidden>Delete last option</button>
+                    </div>
+                </div>
+                <!-- logout button -->
+                <div class="d-grid gap-2 col-6 mx-auto pt-3">
+                    <button class="btn btn-primary" type="button">Create Poll</button>
+                </div>
+            </form>
+        </div>
     </div>
+
+    <!-- for button functionality -->
+    <script type="text/javascript" src="{% static 'Poll/createPoll.js' %}"></script>
 {% endblock mainBody %}
