--- a/templates/Feed/pages/home.html
+++ b/templates/Feed/pages/home.html
@@ -10,275 +10,63 @@
 
 {% block mainBody %}
     <!-- main body starts here -->
-    <div id="mainBody" class="container border-1 border-end border-start">
-        <!-- feed no.1 -->
-        <div class="container border border-5 rounded-2 mb-5">
-        <!-- head of feed -->
-        <div class="container icons d-flex border rounded-5 mt-1">
-            <a href="#user"><img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount"></a>
-            <h3>Name of user</h3>
-        </div>
-        <!-- body of feed -->
-        <div class="container">
-            <!-- Question part -->
-            <h4 class="pt-2">How are you guys?</h4>
-            <!-- Poll part -->
-            <form action="">
-            <div class="pt-3 pb-3">
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Default radio
-                </label>
+    <div class="container border-1 border-end border-start">
+        {% for poll in polls %}
+            <div class="container border border-5 rounded-2 mb-5">
+            <!-- head of feed -->
+                <div class="container icons d-flex border rounded-5 mt-1">
+                    <a href="#user">
+                        {% if poll.pub_user.icon %}
+                            <img src="/media/{{ poll.pub_user.icon }}" alt="userAccount">
+                        {% else %}
+                            <img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount">
+                        {% endif %}
+                    </a>
+                    <h3>@{{ poll.pub_user.username }}</h3>
                 </div>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Default checked radio
-                </label>
-                </div>
-            </div>
-            <div class="d-flex pb-4 justify-content-evenly gap-2">
-                <button class="btn btn-primary col-5 ">
-                <span><i class="fas fa-vote-yea"></i></span>
-                Vote
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-poll-h"></i></span>
-                Results
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-share"></i></span>
-                Share
-                </button>
-            </div>
-            </form>
-            <div class="alert alert-secondary alert-dismissible fade show" role="alert">
-            Your response was recorded successfully.
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        </div>
-        </div>
-        <!-- feed no.2 -->
-        <div class="container border border-5 rounded-2 mb-5">
-        <!-- head of feed -->
-        <div class="container icons d-flex border rounded-5 mt-1">
-            <a href="#user"><img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount"></a>
-            <h3>Name of user</h3>
-        </div>
-        <!-- body of feed -->
-        <div class="container">
-            <!-- Question part -->
-            <h4 class="pt-2">How are you guys?</h4>
-            <!-- Poll part -->
-            <form action="">
-            <div class="pt-3 pb-3">
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Default radio
-                </label>
-                </div>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Default checked radio
-                </label>
+                <!-- body of feed -->
+                <div class="container">
+                    <!-- Question part -->
+                    <h4 class="pt-2">{{ poll.poll_text }}</h4>
+                    <!-- Poll part -->
+                    <form action="">
+                    {% csrf_token %}
+                    <input name="uuid" type="hidden" value="{{ poll.uuid }}" hidden>
+                    <div class="pt-3 pb-3">
+                        {% for option in poll.options.all %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="RadioBtn" id="flexRadioDefault{{ option.pk }}" value="{{ option.pk }}">
+                                <label class="form-check-label" for="flexRadioDefault{{ option.pk }}">
+                                    {{ option.option_text }}
+                                </label>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="d-flex pb-4 justify-content-evenly gap-2">
+                        <button type="submit" class="btn btn-primary col-5 ">
+                        <span><i class="fas fa-vote-yea"></i></span>
+                        Vote
+                        </button>
+                        <a href="{% url 'results' %}{{ poll.uuid }}" type="button" class="btn btn-secondary col-auto col-lg-2">
+                        <span><i class="fas fa-poll-h"></i></span>
+                        Results
+                        </a>
+                        <button type="button" onclick="shareLink('{{ poll.poll_text }}', '/Poll/{{ poll.uuid }}')" class="btn btn-secondary col-auto col-lg-2">
+                        <span><i class="fas fa-share"></i></span>
+                        Share
+                        </button>
+                    </div>
+                    </form>
+                    <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+                    Your response was recorded successfully.
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex pb-4 justify-content-evenly gap-2">
-                <button class="btn btn-primary col-5 ">
-                <span><i class="fas fa-vote-yea"></i></span>
-                Vote
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-poll-h"></i></span>
-                Results
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-share"></i></span>
-                Share
-                </button>
-            </div>
-            </form>
-        </div>
-        </div>
-        <!-- feed no.3 -->
-        <div class="container border border-5 rounded-2 mb-5">
-        <!-- head of feed -->
-        <div class="container icons d-flex border rounded-5 mt-1">
-            <a href="#user"><img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount"></a>
-            <h3>Name of user</h3>
-        </div>
-        <!-- body of feed -->
-        <div class="container">
-            <!-- Question part -->
-            <h4 class="pt-2">How are you guys?</h4>
-            <!-- Poll part -->
-            <form action="">
-            <div class="pt-3 pb-3">
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Default radio
-                </label>
-                </div>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Default checked radio
-                </label>
-                </div>
-            </div>
-            <div class="d-flex pb-4 justify-content-evenly gap-2">
-                <button class="btn btn-primary col-5 ">
-                <span><i class="fas fa-vote-yea"></i></span>
-                Vote
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-poll-h"></i></span>
-                Results
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-share"></i></span>
-                Share
-                </button>
-            </div>
-            </form>
-        </div>
-        </div>
-        <!-- feed no.4 -->
-        <div class="container border border-5 rounded-2 mb-5">
-        <!-- head of feed -->
-        <div class="container icons d-flex border rounded-5 mt-1">
-            <a href="#user"><img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount"></a>
-            <h3>Name of user</h3>
-        </div>
-        <!-- body of feed -->
-        <div class="container">
-            <!-- Question part -->
-            <h4 class="pt-2">How are you guys?</h4>
-            <!-- Poll part -->
-            <form action="">
-            <div class="pt-3 pb-3">
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Default radio
-                </label>
-                </div>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Default checked radio
-                </label>
-                </div>
-            </div>
-            <div class="d-flex pb-4 justify-content-evenly gap-2">
-                <button class="btn btn-primary col-5 ">
-                <span><i class="fas fa-vote-yea"></i></span>
-                Vote
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-poll-h"></i></span>
-                Results
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-share"></i></span>
-                Share
-                </button>
-            </div>
-            </form>
-        </div>
-        </div>
-        <!-- feed no.5 -->
-        <div class="container border border-5 rounded-2 mb-5">
-        <!-- head of feed -->
-        <div class="container icons d-flex border rounded-5 mt-1">
-            <a href="#user"><img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount"></a>
-            <h3>Name of user</h3>
-        </div>
-        <!-- body of feed -->
-        <div class="container">
-            <!-- Question part -->
-            <h4 class="pt-2">How are you guys?</h4>
-            <!-- Poll part -->
-            <form action="">
-            <div class="pt-3 pb-3">
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Default radio
-                </label>
-                </div>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Default checked radio
-                </label>
-                </div>
-            </div>
-            <div class="d-flex pb-4 justify-content-evenly gap-2">
-                <button class="btn btn-primary col-5 ">
-                <span><i class="fas fa-vote-yea"></i></span>
-                Vote
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-poll-h"></i></span>
-                Results
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-share"></i></span>
-                Share
-                </button>
-            </div>
-            </form>
-        </div>
-        </div>
-        <!-- feed no.6 -->
-        <div class="container border border-5 rounded-2 mb-5">
-        <!-- head of feed -->
-        <div class="container icons d-flex border rounded-5 mt-1">
-            <a href="#user"><img src="{% static 'Feed/images/defaultUser.png' %}" alt="userAccount"></a>
-            <h3>Name of user</h3>
-        </div>
-        <!-- body of feed -->
-        <div class="container">
-            <!-- Question part -->
-            <h4 class="pt-2">How are you guys?</h4>
-            <!-- Poll part -->
-            <form action="">
-            <div class="pt-3 pb-3">
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Default radio
-                </label>
-                </div>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Default checked radio
-                </label>
-                </div>
-            </div>
-            <div class="d-flex pb-4 justify-content-evenly gap-2">
-                <button class="btn btn-primary col-5 ">
-                <span><i class="fas fa-vote-yea"></i></span>
-                Vote
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-poll-h"></i></span>
-                Results
-                </button>
-                <button class="btn btn-secondary col-auto col-lg-2">
-                <span><i class="fas fa-share"></i></span>
-                Share
-                </button>
-            </div>
-            </form>
-        </div>
-        </div>
-        
-  </div>
+        {% endfor %}
+    </div>
 {% endblock mainBody %}
+
+{% block script %}
+
+{% endblock script %}
