--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
 
   {% block mainBody %}{% endblock mainBody %}
 
+  {% block script %}{% endblock script %}
+
   <!-- Latest compiled JavaScript -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Custom js -->
