--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %} Default {% endblock title %}</title>
+  <!-- for adding favicon.ico -->
+  <link rel="icon" type="image/x-icon" href="{% static 'Feed/images/favicon.ico' %}">
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
