--- a/templates/Poll/createPoll.html
+++ b/templates/Poll/createPoll.html
@@ -43,5 +43,5 @@
 
 <!-- for (add/delete) button functionality -->
 {% block script %}
-    <script type="text/javascript" src="{% static 'Poll/createPoll.js' %}"></script>
+    <script type="text/javascript" src="{% static 'Poll/src/createPoll.js' %}"></script>
 {% endblock script %}
