--- a/templates/Account/changeIcon.html
+++ b/templates/Account/changeIcon.html
@@ -1,18 +1,9 @@
+{% extends "account-base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>change profile icon | Poll App</title>
-    <!-- custom css -->
-    <link rel="stylesheet" href="{% static 'Account/src/sign-in-or-up.css' %}">
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- font awesome 5.15.4 CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-</head>
-<body>
+
+{% block title %}change profile icon | Poll App{% endblock title %}
+
+{% block body %}
     <div class="m-5">
         <div class="p-5 bg-white bg-opacity-25 rounded-3">
             <form action="" method="post" enctype="multipart/form-data">
@@ -38,5 +29,4 @@
             </form>
         </div>
     </div>
-</body>
-</html>
+{% endblock body %}
