--- a/templates/Account/signin.html
+++ b/templates/Account/signin.html
@@ -1,18 +1,14 @@
+{% extends "account-base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
-    <!-- custom css -->
-    <link rel="stylesheet" href="{% static 'Account/src/sign-in-or-up.css' %}">
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- font awesome 5.15.4 CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-</head>
-<body>
+
+{% block title %}Sign In | Poll App{% endblock title %}
+
+{% block body %}
+    <style>
+        body{
+            height: 100vh;
+        }
+    </style>
     <div class="m-5">
         <div class="p-5 bg-white bg-opacity-25 rounded-3">
             <form action="" method="post" enctype="multipart/form-data">
@@ -41,7 +37,7 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="checkbox" id="checkbox">
                         <label class="form-check-label" for="checkbox">
-                          Remember me
+                        Remember me
                         </label>
                     </div>
                     <div>
@@ -55,5 +51,4 @@
             Don't have a account?<a href="{% url 'signup' %}" class="text-decoration-none">Register here</a>
         </div>
     </div>
-</body>
-</html>
+{% endblock body %}
