completely working state.

--- a/templates/Account/changeIcon.html
+++ b/templates/Account/changeIcon.html
@@ -4,7 +4,7 @@
 {% block title %}change profile icon | Poll App{% endblock title %}
 
 {% block body %}
-    <div class="m-5">
+    <div class="m-5 vh-100">
         <div class="p-5 bg-white bg-opacity-25 rounded-3">
             <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
